Fixed unnecessary scrollbar on settings panel open bug.

--- a/src/editor/css/editor.css
+++ b/src/editor/css/editor.css
@@ -29,6 +29,7 @@ body {
 	-ms-user-select: none;
 	user-select: none;
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 #content {
